# bazel-go

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  main.go
