load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_binary(
    name = "main",
    embed = [":project_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "project_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_chi_chi_v5//:go_default_library",
        "@com_github_go_chi_chi_v5//middleware:go_default_library",
    ],
)
